--- a/Astro/Views/PlanetCell.xib
+++ b/Astro/Views/PlanetCell.xib
@@ -30,43 +30,23 @@
                         <rect key="frame" x="76" y="0.0" width="244" height="72.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Planet Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Jk-PS-8f1">
-                                <rect key="frame" x="50" y="0.0" width="144" height="40"/>
+                                <rect key="frame" x="50" y="15" width="144" height="28"/>
                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="25"/>
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Owe-Cd-ibm" userLabel="Weight Info">
-                                <rect key="frame" x="46" y="40" width="152" height="32.5"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lbs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGP-b5-mdn">
-                                        <rect key="frame" x="95" y="2.5" width="32" height="28"/>
-                                        <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="25"/>
-                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="iGP-b5-mdn" firstAttribute="centerX" secondItem="Owe-Cd-ibm" secondAttribute="centerX" constant="35" id="7OM-GP-b1z"/>
-                                    <constraint firstItem="iGP-b5-mdn" firstAttribute="centerY" secondItem="Owe-Cd-ibm" secondAttribute="centerY" id="fBq-rx-b7V"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RS2-F2-HyL">
-                                <rect key="frame" x="76" y="42" width="62.5" height="28"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99999 lbs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RS2-F2-HyL">
+                                <rect key="frame" x="72" y="43" width="100.5" height="28"/>
                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="25"/>
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="RS2-F2-HyL" firstAttribute="centerY" secondItem="ubs-Ca-fuv" secondAttribute="centerY" constant="19.75" id="13t-Js-EAA"/>
-                            <constraint firstItem="Owe-Cd-ibm" firstAttribute="top" secondItem="ubs-Ca-fuv" secondAttribute="top" constant="40" id="3oS-Ga-agB"/>
-                            <constraint firstAttribute="bottom" secondItem="Owe-Cd-ibm" secondAttribute="bottom" id="Eay-dC-FSM"/>
-                            <constraint firstItem="Owe-Cd-ibm" firstAttribute="centerX" secondItem="ubs-Ca-fuv" secondAttribute="centerX" id="IRl-WD-U3j"/>
-                            <constraint firstItem="Owe-Cd-ibm" firstAttribute="leading" secondItem="ubs-Ca-fuv" secondAttribute="leading" constant="46" id="MAr-eL-W9b"/>
-                            <constraint firstItem="Owe-Cd-ibm" firstAttribute="top" secondItem="7Jk-PS-8f1" secondAttribute="bottom" id="YGA-NE-l8O"/>
-                            <constraint firstItem="RS2-F2-HyL" firstAttribute="centerX" secondItem="ubs-Ca-fuv" secondAttribute="centerX" constant="-15" id="o4f-Vr-CKT"/>
-                            <constraint firstItem="7Jk-PS-8f1" firstAttribute="centerX" secondItem="ubs-Ca-fuv" secondAttribute="centerX" id="r1P-Oy-aAg"/>
-                            <constraint firstItem="7Jk-PS-8f1" firstAttribute="top" secondItem="ubs-Ca-fuv" secondAttribute="top" id="z5F-Bm-BDJ"/>
+                            <constraint firstItem="RS2-F2-HyL" firstAttribute="centerX" secondItem="ubs-Ca-fuv" secondAttribute="centerX" id="0dk-I9-HeI"/>
+                            <constraint firstItem="7Jk-PS-8f1" firstAttribute="centerX" secondItem="ubs-Ca-fuv" secondAttribute="centerX" id="Umt-sV-qYG"/>
+                            <constraint firstItem="7Jk-PS-8f1" firstAttribute="top" secondItem="ubs-Ca-fuv" secondAttribute="top" constant="15" id="kut-Ba-CQQ"/>
+                            <constraint firstItem="RS2-F2-HyL" firstAttribute="top" secondItem="ubs-Ca-fuv" secondAttribute="top" constant="43" id="l9X-D8-ahk"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -84,6 +64,7 @@
             <connections>
                 <outlet property="planetCellImage" destination="mE5-de-7a3" id="OM1-x8-GHb"/>
                 <outlet property="planetName" destination="7Jk-PS-8f1" id="Vdi-YY-UxD"/>
+                <outlet property="weightLabel" destination="RS2-F2-HyL" id="Qpj-Fl-JZx"/>
             </connections>
             <point key="canvasLocation" x="46.399999999999999" y="117.39130434782609"/>
         </tableViewCell>
