--- a/Astro/Views/Base.lproj/Main.storyboard
+++ b/Astro/Views/Base.lproj/Main.storyboard
@@ -56,26 +56,42 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90k-Ng-ah2">
-                                <rect key="frame" x="113" y="229" width="149" height="60"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <state key="normal" title="Push Me"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90k-Ng-ah2">
+                                <rect key="frame" x="91" y="434" width="196" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="40"/>
+                                <state key="normal" title="Check it!"/>
                                 <connections>
                                     <action selector="weightForPlanetsButtonPressed:" destination="tWN-vm-GRG" eventType="touchUpInside" id="AIp-di-Bvk"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enter a Weight..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AD6-cQ-Udx">
+                                <rect key="frame" x="80" y="276" width="219" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="btq-gW-Hu9">
+                                <rect key="frame" x="0.0" y="356" width="375" height="0.0"/>
+                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="25"/>
+                                <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="wSl-C5-PGG" firstAttribute="centerX" secondItem="agq-gj-JmO" secondAttribute="centerX" id="Bod-gJ-sDb"/>
+                            <constraint firstItem="8g0-fo-mqt" firstAttribute="trailing" secondItem="btq-gW-Hu9" secondAttribute="trailing" id="GAA-HF-9CC"/>
+                            <constraint firstItem="btq-gW-Hu9" firstAttribute="top" secondItem="wSl-C5-PGG" secondAttribute="bottom" constant="7.5" id="GwO-4j-t9v"/>
                             <constraint firstItem="wSl-C5-PGG" firstAttribute="centerY" secondItem="agq-gj-JmO" secondAttribute="centerY" id="bab-AO-g2G"/>
-                            <constraint firstItem="90k-Ng-ah2" firstAttribute="centerX" secondItem="agq-gj-JmO" secondAttribute="centerX" id="ezc-AS-TFi"/>
-                            <constraint firstItem="wSl-C5-PGG" firstAttribute="top" secondItem="90k-Ng-ah2" secondAttribute="bottom" constant="29.5" id="rob-M9-KLA"/>
+                            <constraint firstItem="btq-gW-Hu9" firstAttribute="leading" secondItem="8g0-fo-mqt" secondAttribute="leading" id="mJ2-jy-hs5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8g0-fo-mqt"/>
                     </view>
                     <connections>
                         <outlet property="enteredWeight" destination="wSl-C5-PGG" id="i4F-WJ-PhU"/>
+                        <outlet property="validationError" destination="btq-gW-Hu9" id="jXn-U8-1cy"/>
                         <segue destination="LUs-hS-8T0" kind="show" identifier="goToPlanetWeightScreen" id="uUH-Da-ymc"/>
                     </connections>
                 </viewController>
