--- a/Astro/Views/Base.lproj/Main.storyboard
+++ b/Astro/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tWN-vm-GRG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="WfX-W4-qzj">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Planets-->
+        <!--Your Weight-->
         <scene sceneID="sfo-LU-nuM">
             <objects>
                 <tableViewController id="T4o-Ew-tPV" customClass="TableViewController" customModule="Astro" customModuleProvider="target" sceneMemberID="viewController">
@@ -33,11 +33,52 @@
                             <outlet property="delegate" destination="T4o-Ew-tPV" id="uar-ck-cwq"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Planets" id="zTA-En-DjS"/>
+                    <navigationItem key="navigationItem" title="Your Weight" id="zTA-En-DjS">
+                        <barButtonItem key="leftBarButtonItem" title="Back" style="done" id="fIM-5x-SsS">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="dismissButtonPressed:" destination="T4o-Ew-tPV" id="LgZ-xz-5HW"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AMC-VP-5GJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1836" y="26.53673163418291"/>
+            <point key="canvasLocation" x="2775.1999999999998" y="26.53673163418291"/>
+        </scene>
+        <!--Astro-->
+        <scene sceneID="bQd-IO-hlw">
+            <objects>
+                <tableViewController id="wVi-hA-Gzb" customClass="MainTableViewController" customModule="Astro" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Da6-M2-JTD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="bKl-dk-rDd">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bKl-dk-rDd" id="k92-fk-b3t">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="wVi-hA-Gzb" id="Pa6-mF-mR1"/>
+                            <outlet property="delegate" destination="wVi-hA-Gzb" id="YZj-Jf-7Dz"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Astro" id="V2H-wL-DeL">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="6oM-nP-Oox"/>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="tWN-vm-GRG" kind="show" identifier="toWeightOnOtherPlanets" id="h33-z4-n83"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UXD-rW-xj6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-169" y="27"/>
         </scene>
         <!--Enter Weight Controller-->
         <scene sceneID="n72-n8-heC">
@@ -56,15 +97,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90k-Ng-ah2">
-                                <rect key="frame" x="91" y="434" width="196" height="60"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="40"/>
-                                <state key="normal" title="Check it!"/>
-                                <connections>
-                                    <action selector="weightForPlanetsButtonPressed:" destination="tWN-vm-GRG" eventType="touchUpInside" id="AIp-di-Bvk"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enter a Weight..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AD6-cQ-Udx">
                                 <rect key="frame" x="80" y="276" width="219" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -78,8 +110,18 @@
                                 <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90k-Ng-ah2">
+                                <rect key="frame" x="91" y="417" width="196" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="40"/>
+                                <state key="normal" title="Check it!"/>
+                                <connections>
+                                    <action selector="weightForPlanetsButtonPressed:" destination="tWN-vm-GRG" eventType="touchUpInside" id="AIp-di-Bvk"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="wSl-C5-PGG" firstAttribute="centerX" secondItem="agq-gj-JmO" secondAttribute="centerX" id="Bod-gJ-sDb"/>
                             <constraint firstItem="8g0-fo-mqt" firstAttribute="trailing" secondItem="btq-gW-Hu9" secondAttribute="trailing" id="GAA-HF-9CC"/>
@@ -97,7 +139,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nhU-kQ-J6E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="112.8" y="26.53673163418291"/>
+            <point key="canvasLocation" x="1052" y="26.53673163418291"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Bgc-i1-c8V">
@@ -120,7 +162,30 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PC4-1L-n7m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1012" y="27"/>
+            <point key="canvasLocation" x="1951.2" y="26.53673163418291"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="SlB-b7-Qcn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WfX-W4-qzj" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rr0-z6-LSE">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wVi-hA-Gzb" kind="relationship" relationship="rootViewController" id="bVH-2q-J20"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mJC-77-NBV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1113" y="27"/>
         </scene>
     </scenes>
 </document>
